--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -1,3 +1,4 @@
+<div id="the_tabs">
 	<div id="tabs_container">
 	  <ul id="tabs">
 	  {% for graph in graphlist %}
@@ -14,4 +15,5 @@
 	  </div>
 	  {% endfor %}
 	</div>
+</div>
 
