--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -1,7 +1,7 @@
 <div id="the_tabs">
 	<div id="tabs_container">
 	  <ul id="tabs">
-	  {% for graph in graphlist %}
+	  {% for graph in graph_filenamestubs %}
 	    <li {% if loop.first %} class="active" {% endif %}>
               <a href="#{{ graph }}"> {{graph}} </a>
             </li>
@@ -9,9 +9,9 @@
 	  </ul>
 	</div>
 	<div id="tabs_content_container">
-	  {% for graph in graphlist %}
+	  {% for graph in graph_filenamestubs %}
 	  <div id="{{ graph }}" class="tab_content" {% if loop.first %} style="display: block;" {% endif %}>
-	    <a href="static/{{ graph }}.{{ ext }}"><embed src="static/{{ graph }}.{{ ext }}"></img></a>
+	    <a href="{{ graph }}.{{ ext }}"><embed src="{{ graph }}.{{ ext }}"></img></a>
 	  </div>
 	  {% endfor %}
 	</div>
