starting to play with d3 and data together

--- a/static/tabs.css
+++ b/static/tabs.css
@@ -63,3 +63,12 @@
 .right {
     float:right;
 }
+
+div.bar {
+    display: inline-block;
+    width: 20px;
+    height: 75px;
+    margin-right: 2px;
+    background-color: #ddddff;
+}
+    
