starting to play with polychart... running into errors when trying to gen multiple graphs.

--- a/templates/graph.html
+++ b/templates/graph.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 	<link rel="stylesheet" href="static/tabs.css" type="text/css" media="screen" />
-	<script src="static/jquery-1.7.1.min.js"></script>
-	<script src="static/jquery.ba-bbq.min.js"></script>
-	<script src="static/tabs.js"></script>
+	<script src="static/js/jquery-1.7.1.min.js"></script>
+	<script src="static/js/jquery.ba-bbq.min.js"></script>
+	<script src="static/js/tabs.js"></script>
 	</head>
 <body>
 	<div id="header">
